--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -86,6 +86,8 @@ dependencies {
     implementation(libs.jackson.annotations)
     implementation(libs.jackson.databind)
 
+    implementation(libs.libvlc.all)
+
     // http
     implementation(libs.okhttp)
 
@@ -115,5 +117,5 @@ dependencies {
     implementation libs.androidx.room.runtime
     annotationProcessor libs.androidx.room.compiler
 
-    debugImplementation("com.reqable.android:user-certificate-trust:1.0.0")
+    debugImplementation(libs.user.certificate.trust)
 }
