--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -20,7 +20,8 @@
         android:enableOnBackInvokedCallback="false"
         android:requestLegacyExternalStorage="true"
         android:networkSecurityConfig="@xml/network_security_config"
-        android:theme="@style/Theme.IPlayX">
+        android:theme="@style/Theme.IPlayX"
+        >
         <activity
             android:name=".page.Activity"
             android:label="@string/app_name"
