--- a/harmony/oh-package.json5
+++ b/harmony/oh-package.json5
@@ -2,9 +2,11 @@
   "modelVersion": "5.0.2",
   "description": "Please describe the basic information.",
   "dependencies": {
+    "@ohos/axios": "^2.2.4"
   },
   "devDependencies": {
     "@ohos/hypium": "1.0.21",
     "@ohos/hamock": "1.0.0"
-  }
+  },
+  "dynamicDependencies": {}
 }
