--- a/harmony/oh-package.json5
+++ b/harmony/oh-package.json5
@@ -2,7 +2,8 @@
   "modelVersion": "5.0.2",
   "description": "Please describe the basic information.",
   "dependencies": {
-    "@ohos/axios": "^2.2.4"
+    "@ohos/axios": "^2.2.4",
+    "@tencent/mmkv": "^2.1.0"
   },
   "devDependencies": {
     "@ohos/hypium": "1.0.21",
