--- a/harmony/AppScope/app.json5
+++ b/harmony/AppScope/app.json5
@@ -1,6 +1,6 @@
 {
   "app": {
-    "bundleName": "top.ourfor.app.iplay",
+    "bundleName": "top.ourfor.app.iPlay",
     "vendor": "example",
     "versionCode": 1000000,
     "versionName": "1.0.0",
